syntax = "proto3";

message PromptSpec {
    oneof prompt {
        QuestionAnswerPrompt basicPrompt = 1;
        ApplicationPrompt applicationPrompt = 2;
        ClozePrompt clozePrompt = 3;
    }
}

message ApplicationPrompt {
    repeated QuestionAnswerPrompt variants = 1;
}

message QuestionAnswerPrompt {
    string question = 1;
    string answer = 2;
    string explanation = 3;
}

message ClozePrompt {
    string body = 1;
}